{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 76,
  "lineage": "59a4a75e-97dd-afb6-389d-2058a458c007",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:872174810005:loadbalancer/elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "elb-41528530.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb",
            "idle_timeout": 400,
            "instances": [
              "i-04a6914ddc0b138d8",
              "i-074ef14550a21b495"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb",
            "security_groups": [
              "sg-0eb54fb5cc684a7ad"
            ],
            "source_security_group": "872174810005/myvpc-sg",
            "source_security_group_id": "sg-0eb54fb5cc684a7ad",
            "subnets": [
              "subnet-05fc419cee0c7ca13",
              "subnet-0ace2ac6d2ab0760e"
            ],
            "tags": {
              "Name": "myvpc-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.webserver",
            "aws_security_group.myvpc-sg",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085925f297f89fce1",
            "arn": "arn:aws:ec2:us-east-1:872174810005:instance/i-04a6914ddc0b138d8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": true,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a6914ddc0b138d8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0632cb41de3ca618f",
            "private_dns": "ip-10-0-1-54.ec2.internal",
            "private_ip": "10.0.1.54",
            "public_dns": "ec2-3-232-96-141.compute-1.amazonaws.com",
            "public_ip": "3.232.96.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-054923d8b14b638c3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ace2ac6d2ab0760e",
            "tags": {
              "Name": "webserver-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb54fb5cc684a7ad"
            ]
          },
          "dependencies": [
            "aws_security_group.myvpc-sg",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085925f297f89fce1",
            "arn": "arn:aws:ec2:us-east-1:872174810005:instance/i-074ef14550a21b495",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": true,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074ef14550a21b495",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ba54680e2aa60516",
            "private_dns": "ip-10-0-2-147.ec2.internal",
            "private_ip": "10.0.2.147",
            "public_dns": "ec2-18-212-1-158.compute-1.amazonaws.com",
            "public_ip": "18.212.1.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00b634f457a304fe2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05fc419cee0c7ca13",
            "tags": {
              "Name": "webserver-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb54fb5cc684a7ad"
            ]
          },
          "dependencies": [
            "aws_security_group.myvpc-sg",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08983c4b5976ecd78",
            "owner_id": "872174810005",
            "tags": {
              "Name": "myvpc"
            },
            "vpc_id": "vpc-0045a336b0e41c0e8"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07f9cc8e5d0088105",
            "owner_id": "872174810005",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08983c4b5976ecd78",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myvpc-public-rt"
            },
            "vpc_id": "vpc-0045a336b0e41c0e8"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094c529ca81e4b00e",
            "route_table_id": "rtb-07f9cc8e5d0088105",
            "subnet_id": "subnet-0ace2ac6d2ab0760e"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c08628801e3ab844",
            "route_table_id": "rtb-07f9cc8e5d0088105",
            "subnet_id": "subnet-05fc419cee0c7ca13"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myvpc-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872174810005:security-group/sg-0eb54fb5cc684a7ad",
            "description": "Allow http traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb54fb5cc684a7ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myvpc-sg",
            "name_prefix": null,
            "owner_id": "872174810005",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myvpc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0045a336b0e41c0e8"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872174810005:subnet/subnet-0ace2ac6d2ab0760e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ace2ac6d2ab0760e",
            "map_public_ip_on_launch": true,
            "owner_id": "872174810005",
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-0045a336b0e41c0e8"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872174810005:subnet/subnet-05fc419cee0c7ca13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05fc419cee0c7ca13",
            "map_public_ip_on_launch": true,
            "owner_id": "872174810005",
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-0045a336b0e41c0e8"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872174810005:vpc/vpc-0045a336b0e41c0e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02605fe45474d9687",
            "default_route_table_id": "rtb-014ae1068138ee29b",
            "default_security_group_id": "sg-0d72ce006b2d9ab34",
            "dhcp_options_id": "dopt-53055835",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0045a336b0e41c0e8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-014ae1068138ee29b",
            "owner_id": "872174810005",
            "tags": {
              "Name": "myvpc"
            }
          }
        }
      ]
    }
  ]
}